Sends data from all sensors to line user
Need to integrate Groq again in the last part

--- a/Pipeline_with_Plantid_Groq_and_LINE.ipynb
+++ b/Pipeline_with_Plantid_Groq_and_LINE.ipynb
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 25,
    "id": "37b2b4cd2a0c5a1c",
    "metadata": {
     "ExecuteTime": {
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 26,
    "id": "6d46da2722fe2aca",
    "metadata": {
     "ExecuteTime": {
@@ -1011,7 +1011,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 34,
    "id": "7c35cf9e",
    "metadata": {},
    "outputs": [],
@@ -1031,7 +1031,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 35,
    "id": "gXHwNc5WVVV6",
    "metadata": {
     "id": "gXHwNc5WVVV6"
@@ -1050,8 +1050,10 @@
     "    \"\"\"\n",
     "    temperature = round(random.uniform(20.0, 30.0), 2)  # Celsius\n",
     "    humidity = round(random.uniform(40.0, 60.0), 2)     # Percent\n",
+    "    moisture = round(random.uniform(30.0, 70.0), 2)  # Percent\n",
     "    light_level = round(random.uniform(30.0, 70.0), 2)  # Percent\n",
-    "    return {\"temperature\": temperature, \"humidity\": humidity, \"light_level\": light_level}\n",
+    "\n",
+    "    return {\"temperature\": temperature, \"humidity\": humidity,\"moisture\": moisture, \"light_level\": light_level}\n",
     "\n",
     "def send_groq_message(data):\n",
     "    \"\"\"\n",
@@ -1067,6 +1069,8 @@
     "        \"- Temperature: 20°C to 25°C\\n\"\n",
     "        \"- Humidity: 60% to 80%\\n\"\n",
     "        \"- Light Level: 50% to 80%\\n\\n\"\n",
+    "        \"- Moisture: 50% to 80%\\n\\n\"\n",
+    "\n",
     "        \"Please analyze these conditions and provide:\\n\"\n",
     "        \"1. A caring, conversational assessment of the plant's current environment\\n\"\n",
     "        \"2. Specific recommendations for improvement if needed\\n\"\n",
@@ -1086,7 +1090,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 36,
    "id": "4pQnuxZAX9VK",
    "metadata": {
     "id": "4pQnuxZAX9VK"
@@ -1108,7 +1112,7 @@
     "\n",
     "\n",
     "# Step 1: Generate the message from Groq\n",
-    "def generate_plant_message(temperature, humidity, light_level, plant_name):\n",
+    "def generate_plant_message(temperature, humidity, moisture, light_level, plant_name):\n",
     "    \"\"\"\n",
     "    Generates a plant care message using the Groq API.\n",
     "    \"\"\"\n",
@@ -1117,6 +1121,7 @@
     "        f\"Current readings for {plant_name}:\\n\"\n",
     "        f\"    temperature={temperature}°C,\\n\"\n",
     "        f\"    humidity={humidity}%,\\n\"\n",
+    "        f\"    moisture={moisture}%,\\n\"\n",
     "        f\"    light_level={light_level}%,\\n\\n\"\n",
     "        \"Ideal conditions:\\n\"\n",
     "        \"- Temperature: 20°C to 25°C\\n\"\n",
@@ -1134,8 +1139,8 @@
     "\n",
     "\n",
     "# Step 2: Broadcast or send the generated message\n",
-    "def send_plant_status_to_followers(temperature, humidity, light_level,plant_name):\n",
-    "    message = generate_plant_message(temperature, humidity, light_level, plant_name)\n",
+    "def send_plant_status_to_followers(temperature, humidity, moisture, light_level,plant_name):\n",
+    "    message = generate_plant_message(temperature, humidity, moisture, light_level, plant_name)\n",
     "    bot.broadcast_message(message)\n",
     "\n",
     "\n"
@@ -1153,7 +1158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "id": "2eeigZfMYuMZ",
    "metadata": {
     "colab": {
@@ -1167,7 +1172,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Simulated Data: {'temperature': 26.62, 'humidity': 58.46, 'light_level': 42.48}\n",
+      "Simulated Data: {'temperature': 27.3, 'humidity': 48.98, 'moisture': 40.78, 'light_level': 43.89}\n",
       "Simulation stopped.\n"
      ]
     }
@@ -1178,6 +1183,7 @@
     "# Set the interval for messaging (4 hours)\n",
     "message_interval = timedelta(hours=4)\n",
     "next_message_time = datetime.now()\n",
+    "PLANT_NAME = \"Eustoma russellianum\"  # Example plant name\n",
     "try:\n",
     "    while True:\n",
     "        # Simulate sensor data readings\n",
@@ -1187,7 +1193,7 @@
     "        # Check if it's time to send a message\n",
     "        if datetime.now() >= next_message_time:\n",
     "            # Send plant status message to followers\n",
-    "            send_plant_status_to_followers(data['temperature'], data['humidity'], data['light_level'], PLANT_NAME)\n",
+    "            send_plant_status_to_followers(data['temperature'], data['humidity'], data['moisture'], data['light_level'], PLANT_NAME)\n",
     "            # Set the next message time to four hours from now\n",
     "            next_message_time = datetime.now() + message_interval\n",
     "\n",
@@ -1199,13 +1205,112 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "8IwCUIWKae5M",
-   "metadata": {
-    "id": "8IwCUIWKae5M"
-   },
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "91f02e57",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting data and monitoring plant status...\n",
+      "Monitoring stopped.\n"
+     ]
+    }
+   ],
    "source": [
-    "Tested and working!!"
+    "import serial\n",
+    "import time\n",
+    "from datetime import datetime, timedelta\n",
+    "\n",
+    "# Constants for the messaging interval\n",
+    "MESSAGE_INTERVAL = timedelta(seconds=4)\n",
+    "PLANT_NAME = \"Your Plant\"  # Replace with your plant's name\n",
+    "next_message_time = datetime.now()\n",
+    "\n",
+    "# Serial port settings\n",
+    "SERIAL_PORT = 'COM5'  # Update to your correct serial port\n",
+    "BAUD_RATE = 9600  # Must match the Arduino's baud rate\n",
+    "\n",
+    "# Open the serial connection\n",
+    "ser = serial.Serial(SERIAL_PORT, BAUD_RATE)\n",
+    "time.sleep(2)  # Allow time for the connection to establish\n",
+    "\n",
+    "def parse_sensor_data(raw_data):\n",
+    "    \"\"\"Parses sensor data from a formatted string.\"\"\"\n",
+    "    sensor_data = {}\n",
+    "    lines = raw_data.strip().split('\\n')  # Split by new lines\n",
+    "    \n",
+    "    try:\n",
+    "        for line in lines:\n",
+    "            if \"Temperature\" in line:\n",
+    "                sensor_data['temperature'] = float(line.split(\":\")[1].strip().split()[0])\n",
+    "            elif \"Humidity\" in line:\n",
+    "                sensor_data['humidity'] = float(line.split(\":\")[1].strip().split()[0])\n",
+    "            elif \"Pressure\" in line:\n",
+    "                sensor_data['pressure'] = float(line.split(\":\")[1].strip().split()[0])\n",
+    "            elif \"Soil Moisture (Analog)\" in line:\n",
+    "                sensor_data['soil_moisture_analog'] = float(line.split(\":\")[1].strip().split()[0])\n",
+    "            elif \"Soil Moisture (Digital)\" in line:\n",
+    "                sensor_data['soil_moisture_digital'] = line.split(\":\")[1].strip()\n",
+    "    except (IndexError, ValueError) as e:\n",
+    "        print(f\"Error parsing line: {line}, Error: {e}\")\n",
+    "    \n",
+    "    return sensor_data\n",
+    "\n",
+    "def send_plant_status_to_followers(temperature, humidity, pressure, soil_moisture_analog, soil_moisture_digital, plant_name):\n",
+    "    \"\"\"Sends plant status to followers.\"\"\"\n",
+    "   \n",
+    "    message = (\n",
+    "        f\"Sending status for {plant_name}:\\n\"\n",
+    "        f\"  - Temperature: {temperature}°C\\n\"\n",
+    "        f\"  - Humidity: {humidity}%\\n\"\n",
+    "        f\"  - Pressure: {pressure} hPa\\n\"\n",
+    "        f\"  - Soil Moisture (Analog): {soil_moisture_analog}%\\n\"\n",
+    "        f\"  - Soil Moisture (Digital): {soil_moisture_digital}\"\n",
+    "    )\n",
+    "    bot.broadcast_message(message) # Need to integrate this with groq\n",
+    "\n",
+    "print(\"Collecting data and monitoring plant status...\")\n",
+    "\n",
+    "try:\n",
+    "    buffer = \"\"\n",
+    "    while True:\n",
+    "        # Read and decode a line from the serial connection\n",
+    "        line = ser.readline().decode('utf-8').strip()\n",
+    "        \n",
+    "        if line == \"---------------------------\":\n",
+    "            # Process the accumulated data when a full block is received\n",
+    "            sensor_data = parse_sensor_data(buffer)\n",
+    "            buffer = \"\"  # Clear the buffer for the next block\n",
+    "            \n",
+    "            if sensor_data:\n",
+    "                #print(f\"Real Sensor Data: {sensor_data}\")\n",
+    "                \n",
+    "                # Check if it's time to send a message\n",
+    "                if datetime.now() >= next_message_time:\n",
+    "                    send_plant_status_to_followers(\n",
+    "                        sensor_data.get('temperature'),\n",
+    "                        sensor_data.get('humidity'),\n",
+    "                        sensor_data.get('pressure'),\n",
+    "                        sensor_data.get('soil_moisture_analog'),\n",
+    "                        sensor_data.get('soil_moisture_digital'),\n",
+    "                        PLANT_NAME\n",
+    "                    )\n",
+    "                    # Set the next message time\n",
+    "                    next_message_time = datetime.now() + MESSAGE_INTERVAL\n",
+    "        else:\n",
+    "            buffer += line + \"\\n\"  # Accumulate lines into the buffer\n",
+    "\n",
+    "        # Wait before reading the next line\n",
+    "        time.sleep(0.1)\n",
+    "\n",
+    "except KeyboardInterrupt:\n",
+    "    print(\"Monitoring stopped.\")\n",
+    "\n",
+    "finally:\n",
+    "    ser.close()  # Always close the serial connection\n"
    ]
   }
  ],
