Updated problem with the Groq message
Still need to find the proper thresholds per each plant

--- a/Pipeline_with_Plantid_Groq_and_LINE.ipynb
+++ b/Pipeline_with_Plantid_Groq_and_LINE.ipynb
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "id": "37b2b4cd2a0c5a1c",
    "metadata": {
     "ExecuteTime": {
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "id": "6d46da2722fe2aca",
    "metadata": {
     "ExecuteTime": {
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "6c90fb7248b58427",
    "metadata": {
     "ExecuteTime": {
@@ -458,14 +458,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sweetie, your Monstera Deliciosa is doing okay, but it could use a little TLC! The temperature is a bit high, and the humidity is a bit low for its liking. To give it the best care, I recommend adjusting the temperature to 22-24°C and increasing the humidity to 65-70%. By doing so, you'll ensure your Monstera stays happy and healthy!\n",
+      "Hey there, sweetie! So, you wanna know how your Monstera Deliciosa is doing, huh? Right now, it's looking a bit cozy at 27.5°C, but ideally, it'd be more comfortable between 20-25°C. The humidity is decent at 55%, but it could really thrive if it was a bit more saturated, between 60-80%. And, honey, with a light level of 40, it's getting a bit too much direct sunlight! \n",
       "\n",
-      "Let's get that plan going:\n",
+      "Recommendation: Try to keep the temperature more stable, around 22-23°C. Increase the humidity by placing the plant on a tray with pebbles and water or using a humidifier. And, for now, move it a bit to reduce direct sunlight. Give it a gentle trim if it starts to droop, and voilà, your Monstera will be as happy as a kid on a sugar high!\n",
       "\n",
-      "* Adjust the thermostat to 22-24°C.\n",
-      "* Mist the plant daily to bump up the humidity.\n",
-      "* Keep an eye on the light level and adjust as needed.\n",
-      "* Love and care for your Monstera, and it'll thrive!\n"
+      "Action plan: \n",
+      "\n",
+      "Stay cool, stay calm! Adjust the temperature and humidity, and give your little guy some breathing room\n"
      ]
     }
    ],
@@ -569,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "0uqbM8eJQch4",
    "metadata": {
     "colab": {
@@ -585,246 +584,17 @@
      "output_type": "stream",
      "text": [
       "Collecting data from Arduino...\n",
-      "Temperature: 26.50 °C\n",
-      "Humidity: 60.78 %\n",
-      "Pressure: 101.63 hPa\n",
+      "Temperature: 25.41 °C\n",
+      "Humidity: 63.37 %\n",
+      "Pressure: 101.73 hPa\n",
       "Soil Moisture (Analog): 99.00 %\n",
       "Soil Moisture (Digital): WET\n",
       "---------------------------\n",
-      "Temperature: 26.50 °C\n",
-      "Humidity: 60.78 %\n",
-      "Pressure: 101.63 hPa\n",
+      "Temperature: 25.41 °C\n",
+      "Humidity: 63.37 %\n",
+      "Pressure: 101.73 hPa\n",
       "Soil Moisture (Analog): 99.00 %\n",
       "Soil Moisture (Digital): WET\n",
-      "---------------------------\n",
-      "Temperature: 26.49 °C\n",
-      "Humidity: 60.80 %\n",
-      "Pressure: 101.63 hPa\n",
-      "Soil Moisture (Analog): 99.00 %\n",
-      "Soil Moisture (Digital): WET\n",
-      "---------------------------\n",
-      "Temperature: 26.49 °C\n",
-      "Humidity: 60.80 %\n",
-      "Pressure: 101.63 hPa\n",
-      "Soil Moisture (Analog): 99.00 %\n",
-      "Soil Moisture (Digital): WET\n",
-      "---------------------------\n",
-      "Temperature: 26.48 °C\n",
-      "Humidity: 60.80 %\n",
-      "Pressure: 101.63 hPa\n",
-      "Soil Moisture (Analog): 99.00 %\n",
-      "Soil Moisture (Digital): WET\n",
-      "---------------------------\n",
-      "Temperature: 26.49 °C\n",
-      "Humidity: 60.80 %\n",
-      "Pressure: 101.63 hPa\n",
-      "Soil Moisture (Analog): 99.00 %\n",
-      "Soil Moisture (Digital): WET\n",
-      "---------------------------\n",
-      "Temperature: 26.49 °C\n",
-      "Humidity: 60.82 %\n",
-      "Pressure: 101.63 hPa\n",
-      "Soil Moisture (Analog): 99.00 %\n",
-      "Soil Moisture (Digital): WET\n",
-      "---------------------------\n",
-      "Temperature: 26.48 °C\n",
-      "Humidity: 60.84 %\n",
-      "Pressure: 101.63 hPa\n",
-      "Soil Moisture (Analog): 99.00 %\n",
-      "Soil Moisture (Digital): WET\n",
-      "---------------------------\n",
-      "Temperature: 26.49 °C\n",
-      "Humidity: 60.84 %\n",
-      "Pressure: 101.63 hPa\n",
-      "Soil Moisture (Analog): 99.00 %\n",
-      "Soil Moisture (Digital): WET\n",
-      "---------------------------\n",
-      "Temperature: 26.49 °C\n",
-      "Humidity: 60.86 %\n",
-      "Pressure: 101.63 hPa\n",
-      "Soil Moisture (Analog): 99.00 %\n",
-      "Soil Moisture (Digital): WET\n",
-      "---------------------------\n",
-      "Temperature: 26.49 °C\n",
-      "Humidity: 60.86 %\n",
-      "Pressure: 101.63 hPa\n",
-      "Soil Moisture (Analog): 99.00 %\n",
-      "Soil Moisture (Digital): WET\n",
-      "---------------------------\n",
-      "Temperature: 26.48 °C\n",
-      "Humidity: 60.86 %\n",
-      "Pressure: 101.63 hPa\n",
-      "Soil Moisture (Analog): 99.00 %\n",
-      "Soil Moisture (Digital): WET\n",
-      "---------------------------\n",
-      "Temperature: 26.46 °C\n",
-      "Humidity: 60.88 %\n",
-      "Pressure: 101.63 hPa\n",
-      "Soil Moisture (Analog): 99.00 %\n",
-      "Soil Moisture (Digital): WET\n",
-      "---------------------------\n",
-      "Temperature: 26.46 °C\n",
-      "Humidity: 60.88 %\n",
-      "Pressure: 101.63 hPa\n",
-      "Soil Moisture (Analog): 99.00 %\n",
-      "Soil Moisture (Digital): WET\n",
-      "---------------------------\n",
-      "Temperature: 26.46 °C\n",
-      "Humidity: 60.89 %\n",
-      "Pressure: 101.64 hPa\n",
-      "Soil Moisture (Analog): 99.00 %\n",
-      "Soil Moisture (Digital): WET\n",
-      "---------------------------\n",
-      "Temperature: 26.46 °C\n",
-      "Humidity: 60.89 %\n",
-      "Pressure: 101.63 hPa\n",
-      "Soil Moisture (Analog): 99.00 %\n",
-      "Soil Moisture (Digital): WET\n",
-      "---------------------------\n",
-      "Temperature: 26.46 °C\n",
-      "Humidity: 60.91 %\n",
-      "Pressure: 101.63 hPa\n",
-      "Soil Moisture (Analog): 99.00 %\n",
-      "Soil Moisture (Digital): WET\n",
-      "---------------------------\n",
-      "Temperature: 26.46 °C\n",
-      "Humidity: 60.91 %\n",
-      "Pressure: 101.63 hPa\n",
-      "Soil Moisture (Analog): 99.00 %\n",
-      "Soil Moisture (Digital): WET\n",
-      "---------------------------\n",
-      "Temperature: 26.45 °C\n",
-      "Humidity: 60.93 %\n",
-      "Pressure: 101.63 hPa\n",
-      "Soil Moisture (Analog): 99.00 %\n",
-      "Soil Moisture (Digital): WET\n",
-      "---------------------------\n",
-      "Temperature: 26.45 °C\n",
-      "Humidity: 60.93 %\n",
-      "Pressure: 101.63 hPa\n",
-      "Soil Moisture (Analog): 99.00 %\n",
-      "Soil Moisture (Digital): WET\n",
-      "---------------------------\n",
-      "Temperature: 26.46 °C\n",
-      "Humidity: 60.93 %\n",
-      "Pressure: 101.63 hPa\n",
-      "Soil Moisture (Analog): 99.00 %\n",
-      "Soil Moisture (Digital): WET\n",
-      "---------------------------\n",
-      "Temperature: 26.45 °C\n",
-      "Humidity: 60.93 %\n",
-      "Pressure: 101.63 hPa\n",
-      "Soil Moisture (Analog): 99.00 %\n",
-      "Soil Moisture (Digital): WET\n",
-      "---------------------------\n",
-      "Temperature: 26.45 °C\n",
-      "Humidity: 60.94 %\n",
-      "Pressure: 101.63 hPa\n",
-      "Soil Moisture (Analog): 99.00 %\n",
-      "Soil Moisture (Digital): WET\n",
-      "---------------------------\n",
-      "Temperature: 26.43 °C\n",
-      "Humidity: 60.94 %\n",
-      "Pressure: 101.63 hPa\n",
-      "Soil Moisture (Analog): 99.00 %\n",
-      "Soil Moisture (Digital): WET\n",
-      "---------------------------\n",
-      "Temperature: 26.45 °C\n",
-      "Humidity: 60.94 %\n",
-      "Pressure: 101.63 hPa\n",
-      "Soil Moisture (Analog): 99.00 %\n",
-      "Soil Moisture (Digital): WET\n",
-      "---------------------------\n",
-      "Temperature: 26.45 °C\n",
-      "Humidity: 60.94 %\n",
-      "Pressure: 101.63 hPa\n",
-      "Soil Moisture (Analog): 99.00 %\n",
-      "Soil Moisture (Digital): WET\n",
-      "---------------------------\n",
-      "Temperature: 26.46 °C\n",
-      "Humidity: 61.84 %\n",
-      "Pressure: 101.63 hPa\n",
-      "Soil Moisture (Analog): 99.00 %\n",
-      "Soil Moisture (Digital): WET\n",
-      "---------------------------\n",
-      "Temperature: 26.48 °C\n",
-      "Humidity: 62.99 %\n",
-      "Pressure: 101.63 hPa\n",
-      "Soil Moisture (Analog): 98.00 %\n",
-      "Soil Moisture (Digital): WET\n",
-      "---------------------------\n",
-      "Temperature: 26.48 °C\n",
-      "Humidity: 62.03 %\n",
-      "Pressure: 101.63 hPa\n",
-      "Soil Moisture (Analog): 97.00 %\n",
-      "Soil Moisture (Digital): WET\n",
-      "---------------------------\n",
-      "Temperature: 26.48 °C\n",
-      "Humidity: 61.54 %\n",
-      "Pressure: 101.63 hPa\n",
-      "Soil Moisture (Analog): 96.00 %\n",
-      "Soil Moisture (Digital): WET\n",
-      "---------------------------\n",
-      "Temperature: 26.46 °C\n",
-      "Humidity: 61.38 %\n",
-      "Pressure: 101.63 hPa\n",
-      "Soil Moisture (Analog): 96.00 %\n",
-      "Soil Moisture (Digital): WET\n",
-      "---------------------------\n",
-      "Temperature: 26.48 °C\n",
-      "Humidity: 61.52 %\n",
-      "Pressure: 101.63 hPa\n",
-      "Soil Moisture (Analog): 99.00 %\n",
-      "Soil Moisture (Digital): WET\n",
-      "---------------------------\n",
-      "Temperature: 26.48 °C\n",
-      "Humidity: 62.08 %\n",
-      "Pressure: 101.63 hPa\n",
-      "Soil Moisture (Analog): 97.00 %\n",
-      "Soil Moisture (Digital): WET\n",
-      "---------------------------\n",
-      "Temperature: 26.50 °C\n",
-      "Humidity: 62.10 %\n",
-      "Pressure: 101.63 hPa\n",
-      "Soil Moisture (Analog): 96.00 %\n",
-      "Soil Moisture (Digital): WET\n",
-      "---------------------------\n",
-      "Temperature: 26.49 °C\n",
-      "Humidity: 61.76 %\n",
-      "Pressure: 101.63 hPa\n",
-      "Soil Moisture (Analog): 95.00 %\n",
-      "Soil Moisture (Digital): WET\n",
-      "---------------------------\n",
-      "Temperature: 26.49 °C\n",
-      "Humidity: 61.44 %\n",
-      "Pressure: 101.63 hPa\n",
-      "Soil Moisture (Analog): 97.00 %\n",
-      "Soil Moisture (Digital): WET\n",
-      "---------------------------\n",
-      "Temperature: 26.50 °C\n",
-      "Humidity: 61.25 %\n",
-      "Pressure: 101.63 hPa\n",
-      "Soil Moisture (Analog): 94.00 %\n",
-      "Soil Moisture (Digital): WET\n",
-      "---------------------------\n",
-      "Temperature: 26.50 °C\n",
-      "Humidity: 61.14 %\n",
-      "Pressure: 101.63 hPa\n",
-      "Soil Moisture (Analog): 96.00 %\n",
-      "Soil Moisture (Digital): WET\n",
-      "---------------------------\n",
-      "Temperature: 26.50 °C\n",
-      "Humidity: 61.09 %\n",
-      "Pressure: 101.63 hPa\n",
-      "Soil Moisture (Analog): 94.00 %\n",
-      "Soil Moisture (Digital): WET\n",
-      "---------------------------\n",
-      "Temperature: 26.50 °C\n",
-      "Humidity: 61.05 %\n",
-      "Pressure: 101.63 hPa\n",
-      "Soil Moisture (Analog): 97.00 %\n",
-      "Soil Moisture (Digital): WET\n",
-      "---------------------------\n",
       "Data collection stopped.\n"
      ]
     }
@@ -885,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "RdUcFrKniSel",
    "metadata": {
     "colab": {
@@ -896,23 +666,14 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Possible plant identifications:\n",
-      "Species: Eustoma russellianum, Probability: 74.47%\n",
-      "\n",
-      "\n",
-      "Species: Nelumbo nucifera, Probability: 18.04%\n",
-      "\n",
-      "\n",
-      "Species: Rosa, Probability: 2.62%\n",
-      "\n",
-      "\n",
-      "Species: Anemone coronaria, Probability: 2.54%\n",
-      "\n",
-      "\n",
-      "Plant with the highest probability: Eustoma russellianum\n"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'google'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[7], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mrequests\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mbase64\u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mgoogle\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcolab\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m userdata\n\u001b[0;32m      5\u001b[0m \u001b[38;5;66;03m# Define the endpoint and API key\u001b[39;00m\n\u001b[0;32m      6\u001b[0m url \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mhttps://api.plant.id/v2/identify\u001b[39m\u001b[38;5;124m\"\u001b[39m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'google'"
      ]
     }
    ],
@@ -1011,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 8,
    "id": "7c35cf9e",
    "metadata": {},
    "outputs": [],
@@ -1031,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "gXHwNc5WVVV6",
    "metadata": {
     "id": "gXHwNc5WVVV6"
@@ -1051,9 +812,9 @@
     "    temperature = round(random.uniform(20.0, 30.0), 2)  # Celsius\n",
     "    humidity = round(random.uniform(40.0, 60.0), 2)     # Percent\n",
     "    moisture = round(random.uniform(30.0, 70.0), 2)  # Percent\n",
-    "    light_level = round(random.uniform(30.0, 70.0), 2)  # Percent\n",
+    "    pressure = round(random.uniform(30.0, 70.0), 2)  # Percent\n",
     "\n",
-    "    return {\"temperature\": temperature, \"humidity\": humidity,\"moisture\": moisture, \"light_level\": light_level}\n",
+    "    return {\"temperature\": temperature, \"humidity\": humidity,\"pressure\": pressure, \"moisture\": moisture}\n",
     "\n",
     "def send_groq_message(data):\n",
     "    \"\"\"\n",
@@ -1064,11 +825,13 @@
     "        f\"Current readings for Monstera Deliciosa:\\n\"\n",
     "        f\"    temperature={data['temperature']}°C,\\n\"\n",
     "        f\"    humidity={data['humidity']}%,\\n\"\n",
-    "        f\"    light_level={data['light_level']}%,\\n\\n\"\n",
+    "        f\"    pressure={data['pressure']}%,\\n\"\n",
+    "        f\"    moisture={data['moisture']}%,\\n\\n\"\n",
+    "\n",
     "        \"Ideal conditions for this plant:\\n\"\n",
     "        \"- Temperature: 20°C to 25°C\\n\"\n",
     "        \"- Humidity: 60% to 80%\\n\"\n",
-    "        \"- Light Level: 50% to 80%\\n\\n\"\n",
+    "        \"- Pressure: 50% to 80%\\n\\n\"\n",
     "        \"- Moisture: 50% to 80%\\n\\n\"\n",
     "\n",
     "        \"Please analyze these conditions and provide:\\n\"\n",
@@ -1090,7 +853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 13,
    "id": "4pQnuxZAX9VK",
    "metadata": {
     "id": "4pQnuxZAX9VK"
@@ -1112,7 +875,7 @@
     "\n",
     "\n",
     "# Step 1: Generate the message from Groq\n",
-    "def generate_plant_message(temperature, humidity, moisture, light_level, plant_name):\n",
+    "def generate_plant_message(temperature, humidity, pressure, moisture, plant_name):\n",
     "    \"\"\"\n",
     "    Generates a plant care message using the Groq API.\n",
     "    \"\"\"\n",
@@ -1121,12 +884,14 @@
     "        f\"Current readings for {plant_name}:\\n\"\n",
     "        f\"    temperature={temperature}°C,\\n\"\n",
     "        f\"    humidity={humidity}%,\\n\"\n",
-    "        f\"    moisture={moisture}%,\\n\"\n",
-    "        f\"    light_level={light_level}%,\\n\\n\"\n",
+    "        f\"    pressure={pressure}%,\\n\"\n",
+    "        f\"    moisture={moisture}%,\\n\\n\"\n",
+    "        \n",
     "        \"Ideal conditions:\\n\"\n",
     "        \"- Temperature: 20°C to 25°C\\n\"\n",
     "        \"- Humidity: 60% to 80%\\n\"\n",
-    "        \"- Light Level: 50% to 80%\\n\\n\"\n",
+    "        \"- Pressure: 50% to 80%\\n\"\n",
+    "        \"- Moisture: 50% to 80%\\n\\n\"\n",
     "        \"Provide a friendly message for the user.\"\n",
     "    )\n",
     "\n",
@@ -1139,8 +904,8 @@
     "\n",
     "\n",
     "# Step 2: Broadcast or send the generated message\n",
-    "def send_plant_status_to_followers(temperature, humidity, moisture, light_level,plant_name):\n",
-    "    message = generate_plant_message(temperature, humidity, moisture, light_level, plant_name)\n",
+    "def send_plant_status_to_followers(temperature, humidity, pressure, moisture, plant_name):\n",
+    "    message = generate_plant_message(temperature, humidity, pressure, moisture,  plant_name)\n",
     "    bot.broadcast_message(message)\n",
     "\n",
     "\n"
@@ -1206,7 +971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "91f02e57",
    "metadata": {},
    "outputs": [
@@ -1259,18 +1024,6 @@
     "    \n",
     "    return sensor_data\n",
     "\n",
-    "def send_plant_status_to_followers(temperature, humidity, pressure, soil_moisture_analog, soil_moisture_digital, plant_name):\n",
-    "    \"\"\"Sends plant status to followers.\"\"\"\n",
-    "   \n",
-    "    message = (\n",
-    "        f\"Sending status for {plant_name}:\\n\"\n",
-    "        f\"  - Temperature: {temperature}°C\\n\"\n",
-    "        f\"  - Humidity: {humidity}%\\n\"\n",
-    "        f\"  - Pressure: {pressure} hPa\\n\"\n",
-    "        f\"  - Soil Moisture (Analog): {soil_moisture_analog}%\\n\"\n",
-    "        f\"  - Soil Moisture (Digital): {soil_moisture_digital}\"\n",
-    "    )\n",
-    "    bot.broadcast_message(message) # Need to integrate this with groq\n",
     "\n",
     "print(\"Collecting data and monitoring plant status...\")\n",
     "\n",
@@ -1295,7 +1048,6 @@
     "                        sensor_data.get('humidity'),\n",
     "                        sensor_data.get('pressure'),\n",
     "                        sensor_data.get('soil_moisture_analog'),\n",
-    "                        sensor_data.get('soil_moisture_digital'),\n",
     "                        PLANT_NAME\n",
     "                    )\n",
     "                    # Set the next message time\n",
